--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,24 @@
-<h1>
+	<div class="container">
 
-   <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SaasApp</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../Styles/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-</head>
-
-
-
-  <body>
-
- <div class= "container-fluid">
-      <div class= "row test1">
-        <div class="col-md-2">
-          <img src= "../Images/logo.png" alt= "Logo" >
-          <h2><span class`="GGTitle"> Gainz Goalz </span></h2> 
-        </div>
-
-        <div class="col-md-2 cutTitle">
-          <h1> <span><a href='cut.html'>CUT <a></span></h1>
-        </div>
-      </div>
-    </div>
-
-
-     <div class="row test2">
-       <div class="col-md-2"></div>
-       <div class="col-md-2">
-        <h1> <a> MAINTAIN </a> </h1>
-      </div>
-      </div>
-
-      <div class="row test3">
-        <div class= "col-md-2"></div>
-        <div class= "col-md-2"> 
-        <h1> <span> BULK </span> </h1>
-        </div>
-      </div>
- 
-</h1>
-
+		  <!-- Static navbar -->
+		  <nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+			  <div class="navbar-header">
+					<a class="navbar-brand" href="index.html" title="Gainz Goalz">
+        <img style="max-width:65px; margin-top: -14px;"
+             src="../Images/logo.png"></a>
+				<a class="navbar-brand" >Gainz Goalz</a>
+			  </div>
+			  <div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+				  <li><a href="#">Cut</a></li>
+					<li><a href="#">Maintain</a></li>
+					<li><a href="#">Bulk</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+				  <li><a href="#">Login</a></li>
+				</ul>
+			  </div><!--/.nav-collapse -->
+			</div><!--/.container-fluid -->
+		  </nav>
 <router-outlet></router-outlet>
