--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,3 +1,23 @@
-<p>
-  recipe-details works!
-</p>
+<!--<div class="container">
+	<div class="panel panel-default">
+// Default panel contents 
+		<div class="panel" style="color:white; background-color:#337ab7"> 
+			<h3>{{recipe.recipeId}}. Post - {{recipe.recipeTitle}}</h3>
+			<div>
+			<a style="color:white" href="#"><span class="glyphicon glyphicon-edit"></span></a>
+			<a style="color:white" href="#"><span class="glyphicon glyphicon-trash"></span></a>
+			<a style="color:white" href="#"><span class="glyphicon glyphicon-ok"></span></a>
+			</div>
+		</div>
+		<app-detail-table [details]="recipeList"></app-detail-table>
+		//Table 
+	</div>
+</div>-->
+
+<h1> recipe title here </h1>
+  <div *ngFor= "let r of recipe">
+    
+    <h3> {{r.recipeTitle}} </h3>
+    <p> {{r.ingredients}}</p>
+
+</div>
