--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -2,7 +2,7 @@
   <div  class="form-group">
     <label class="col-md-3 control-label">Recipe Title: </label>
     <div class="col-md-9" style="Width:auto">
-        <input class= "form-control" name="recipeTitle" [(ngModel)]= "recipeT.recipeTitle" placeholder="name"/> 
+        <input class= "form-control" name="recipeTitle" [(ngModel)]= "recipeTitle" placeholder="name"/> 
    </div>
   </div>
 </div>
