--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,7 @@
 			<div class="container-fluid">
 			  <div class="navbar-header">
 					<a class="navbar-brand" href="index.html" title="Gainz Goalz">
-        <img style="max-width:65px; margin-top: -14px;"
-             src="../Images/logo.png"></a>
+        <img src="../Images/logo.png " style="max-width:65px; margin-top: -14px;"></a>
 				<a class="navbar-brand" >Gainz Goalz</a>
 			  </div>
 			  <div id="navbar" class="navbar-collapse collapse">
