--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,9 +1,9 @@
-<h1> {{recipeObject.recipeTitle}}</h1>
-<h2> Ingredients: {{recipeObject.ingredients}} </h2>
-<h3> Instructions: {{recipeObject.instructions}} </h3>
+<h1> {{recipeTitle}}</h1>
+<h2> Ingredients: {{ingredients}} </h2>
+<h3> Instructions: {{instructions}} </h3>
 <b> Macronutrients </b>
-<p> Calories:{{recipeObject.calories}}</p>
-<p> Protein: {{recipeObject.protein}}<p>
-<p> Fat: {{recipeObject.fat}}</p>
-<p> Carbs: {{recipeObject.carbs}} </p>
-<p> Sugar: {{recipeObject.sugar}} </p>
+<p> Calories:{{calories}}</p>
+<p> Protein: {{protein}}<p>
+<p> Fat: {{fat}}</p>
+<p> Carbs: {{carbs}} </p>
+<p> Sugar: {{sugar}} </p>
