--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-	<div class="container">
-
+	<div class="container-fluid">
+		<div class="row">
 		  <!-- Static navbar -->
 		  <nav class="navbar navbar-inverse">
 			<div class="container-fluid">
@@ -20,5 +20,6 @@
 			  </div><!--/.nav-collapse -->
 			</div><!--/.container-fluid -->
 		  </nav>
-
+			</div>
+</div>
 <router-outlet></router-outlet>
