--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
      <div class="row test2">
        <div class="col-md-2"></div>
        <div class="col-md-2">
-        <h1><a>MAINTAIN</a></h1>
+        <h1><a href= "/recipe">MAINTAIN</a></h1>
       </div>
       </div>
 
