--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,8 @@
         <input type="password" name="p" placeholder="Password" required="required" />
         <button type="submit" class="btn btn-primary btn-block btn-large">Login</button>
     </form>
+    <br>
+    <a href="../auth/google" class="btn btn-default">Login with Google</a>
 </div>
   
     <script src="js/index.js"></script>
