--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,8 @@
 					<li><a href="/recipe">Bulk</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
+					<li> <a href= "/add_recipe"> Add Recipe </a> </li>
+					<li> <a href= "/myrecipes"> My Recipes </a></li>
 				  <li><a href="/login">Login</a></li>
 				</ul>
 			  </div><!--/.nav-collapse -->
